<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>GeneralSettings</class>
 <widget class="QWidget" name="GeneralSettings">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>413</width>
    <height>413</height>
   </rect>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="QTabWidget" name="tabWidget">
     <property name="toolTip">
      <string/>
     </property>
     <property name="currentIndex">
      <number>1</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
       <string extracomment="@title:tab">Stopwatch</string>
      </attribute>
      <layout class="QVBoxLayout" name="verticalLayout_7">
       <item>
        <widget class="QGroupBox" name="groupBox_4">
         <property name="minimumSize">
          <size>
           <width>369</width>
           <height>0</height>
          </size>
         </property>
         <property name="title">
          <string>Time Format</string>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_2">
          <item>
           <widget class="QCheckBox" name="kcfg_showHours">
            <property name="toolTip">
             <string>Whether to show hours in the stopwatch</string>
            </property>
            <property name="text">
             <string>Show Hours</string>
            </property>
            <property name="checked">
             <bool>true</bool>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QCheckBox" name="kcfg_showMinutes">
            <property name="toolTip">
             <string>Whether to show minutes in the stopwatch</string>
            </property>
            <property name="text">
             <string>Show Minutes</string>
            </property>
            <property name="checked">
             <bool>true</bool>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QWidget" name="widget" native="true">
            <layout class="QHBoxLayout" name="horizontalLayout">
             <property name="spacing">
              <number>0</number>
             </property>
             <property name="leftMargin">
              <number>0</number>
             </property>
             <property name="topMargin">
              <number>0</number>
             </property>
             <property name="rightMargin">
              <number>0</number>
             </property>
             <property name="bottomMargin">
              <number>0</number>
             </property>
             <item>
              <widget class="QCheckBox" name="kcfg_showSecondFractions">
               <property name="toolTip">
                <string>Whether to show second fractions in the stopwatch</string>
               </property>
               <property name="text">
                <string>Show Second Fractions:</string>
               </property>
               <property name="checked">
                <bool>true</bool>
               </property>
              </widget>
             </item>
             <item>
              <widget class="QComboBox" name="kcfg_fractionsType">
               <item>
                <property name="text">
                 <string>Up to Tenths</string>
                </property>
               </item>
               <item>
                <property name="text">
                 <string>Up to Hundredths</string>
                </property>
               </item>
               <item>
                <property name="text">
                 <string>Up to Thousandths</string>
                </property>
               </item>
              </widget>
             </item>
             <item>
              <spacer name="horizontalSpacer">
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
               </property>
               <property name="sizeHint" stdset="0">
                <size>
                 <width>40</width>
                 <height>20</height>
                </size>
               </property>
              </spacer>
             </item>
            </layout>
           </widget>
          </item>
         </layout>
        </widget>
       </item>
       <item>
        <widget class="QCheckBox" name="kcfg_startTimerImmediately">
         <property name="text">
          <string>Start timer immediately</string>
         </property>
        </widget>
       </item>
       <item>
        <spacer name="verticalSpacer">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
           <width>20</width>
           <height>40</height>
          </size>
         </property>
        </spacer>
       </item>
      </layout>
     </widget>
     <widget class="QWidget" name="tab_2">
      <attribute name="title">
       <string extracomment="@title:tab">Laps</string>
      </attribute>
      <layout class="QVBoxLayout" name="verticalLayout_8">
       <item>
        <widget class="QCheckBox" name="kcfg_isLapsRecordingEnabled">
         <property name="toolTip">
          <string>Whether to enable the laps recording feature</string>
         </property>
         <property name="text">
          <string>Enable Laps Recording</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QWidget" name="lapSettings" native="true">
         <layout class="QVBoxLayout" name="verticalLayout_3">
          <item>
           <widget class="QGroupBox" name="groupBox">
            <property name="minimumSize">
             <size>
              <width>369</width>
              <height>0</height>
             </size>
            </property>
            <property name="title">
             <string>Lap Times Format</string>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_4">
             <item>
              <widget class="QCheckBox" name="kcfg_showLapHours">
               <property name="toolTip">
                <string>Whether to show hours in the laps</string>
               </property>
               <property name="text">
                <string>Show Hours</string>
               </property>
               <property name="checked">
                <bool>true</bool>
               </property>
              </widget>
             </item>
             <item>
              <widget class="QCheckBox" name="kcfg_showLapMinutes">
               <property name="toolTip">
                <string>Whether to show minutes in the laps</string>
               </property>
               <property name="text">
                <string>Show Minutes</string>
               </property>
               <property name="checked">
                <bool>true</bool>
               </property>
              </widget>
             </item>
             <item>
              <widget class="QWidget" name="widget_3" native="true">
               <layout class="QHBoxLayout" name="horizontalLayout_2">
                <property name="spacing">
                 <number>0</number>
                </property>
                <property name="leftMargin">
                 <number>0</number>
                </property>
                <property name="topMargin">
                 <number>0</number>
                </property>
                <property name="rightMargin">
                 <number>0</number>
                </property>
                <property name="bottomMargin">
                 <number>0</number>
                </property>
                <item>
                 <widget class="QCheckBox" name="kcfg_showLapSecondFractions">
                  <property name="toolTip">
                   <string>Whether to show second fractions in the laps</string>
                  </property>
                  <property name="text">
                   <string>Show Second Fractions:</string>
                  </property>
                  <property name="checked">
                   <bool>true</bool>
                  </property>
                 </widget>
                </item>
                <item>
                 <widget class="QComboBox" name="kcfg_lapFractionsType">
                  <item>
                   <property name="text">
                    <string>Up to Tenths</string>
                   </property>
                  </item>
                  <item>
                   <property name="text">
                    <string>Up to Hundredths</string>
                   </property>
                  </item>
                  <item>
                   <property name="text">
                    <string>Up to Thousandths</string>
                   </property>
                  </item>
                 </widget>
                </item>
                <item>
                 <spacer name="horizontalSpacer_2">
                  <property name="orientation">
                   <enum>Qt::Horizontal</enum>
                  </property>
                  <property name="sizeHint" stdset="0">
                   <size>
                    <width>40</width>
                    <height>20</height>
                   </size>
                  </property>
                 </spacer>
                </item>
               </layout>
              </widget>
             </item>
            </layout>
           </widget>
          </item>
          <item>
           <widget class="QCheckBox" name="kcfg_showLapAbsoluteTimes">
            <property name="text">
             <string>Show Absolute Times</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QCheckBox" name="kcfg_showLapNotes">
            <property name="text">
             <string>Show Notes</string>
            </property>
           </widget>
          </item>
         </layout>
        </widget>
       </item>
       <item>
        <spacer name="verticalSpacer_2">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
           <width>20</width>
           <height>40</height>
          </size>
         </property>
        </spacer>
       </item>
      </layout>
     </widget>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
